[gd_scene load_steps=4 format=3 uid="uid://dk1xkb5e4gj3c"]

[ext_resource type="Script" path="res://Levels/title_screen.gd" id="1_pcwgi"]
[ext_resource type="Texture2D" uid="uid://ct2w7c5eaxkci" path="res://PNG/Space_Stars6.png" id="2_ucbyc"]
[ext_resource type="AudioStream" uid="uid://cgupdoksgcglt" path="res://Sounds/Music/title_screen.mp3" id="3_r817w"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -42.0
offset_right = 88.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pcwgi")

[node name="SpaceStars6" type="Sprite2D" parent="."]
position = Vector2(522, 287)
scale = Vector2(13.5625, 8.1875)
texture = ExtResource("2_ucbyc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 60
text = "Laser Shooter 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="seperator" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="play_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "PLAY"

[node name="option_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "STORY"

[node name="quit_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "QUIT"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_r817w")

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/option_button" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
